samples/_failures_safe/1761547099_eb0cc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_059f88a7.c: In function ‘main’:
./samples/SAFE/__tmp_059f88a7.c:169:28: error: missing terminating " character
  169 |                     printf("
      |                            ^
./samples/SAFE/__tmp_059f88a7.c:169:21: error: expected expression at end of input
  169 |                     printf("
      |                     ^~~~~~
./samples/SAFE/__tmp_059f88a7.c:169:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_059f88a7.c:169:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_059f88a7.c:169:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_059f88a7.c:169:21: error: expected declaration or statement at end of input
